fillResume method implemented in ResumeTestData